# mandel-rs

./: .gitignore  CLAUDE.md  Cargo.toml  INSTALL.md  README.md  build.rs
.github/workflows/: release.yml
manifestos/: README.md  manifesto-01-initial-project-master-plan.md  manifesto-02-parallel-storage.md  manifesto-03-cleanup-and-mvp.md  manifesto-04-deployment-efficency-polish.md
release-notes/: release-0.4.0.md  release-0.5.0.md  release-0.5.1.md  release-0.5.2.md  release-0.6.0.md
session-protocols/: 2025-06-09-01.txt  2025-06-09-02.txt  2025-06-10.txt  2025-06-11.txt  2025-06-13.txt  2025-06-14.txt  2025-06-15.txt  2025-06-17.txt  2025-06-19.txt  2025-06-20.txt  2025-06-21-01.txt  2025-06-21-02.txt  2025-06-21.txt  2025-06-22.txt  2025-06-24.txt  2025-06-25.txt  2025-06-26.txt  2025-06-28.txt  2025-06-29.txt  2025-07-07.txt  2025-07-10.txt  2025-07-12.txt  2025-07-13.txt  2025-07-20.txt  2025-08-04.txt  2025-08-07.txt  2025-08-08.txt  2025-08-17.txt  2025-09-28.txt  2025-10-04.txt  README.md
src/: data_plane.rs  data_point.rs  data_storage.rs  main.rs  mandel_iced_app.rs  mandelbrot_app.rs  simple_mandelbrot.rs
src/comp/: bd_math.rs  mandelbrot_engine.rs  math_area.rs  math_data.rs  mod.rs  simple_mandelbrot.rs
src/gui/: mandel_iced_app.rs  mod.rs
src/gui/iced/: app.rs  file_save.rs  fract_canvas.rs  message.rs  mod.rs  overlay_canvas.rs  pixels.rs  subscription.rs  update.rs  view.rs
src/storage/: coord_spaces.rs  data_point.rs  image_comp_properties.rs  mod.rs  param_description.rs  param_presets.rs
src/storage/computation/: comp_stage.rs  comp_storage.rs  mod.rs
src/storage/event/: data_point_change_event.rs  event_batcher.rs  mod.rs  stage_event_batcher.rs
src/storage/visualization/: data_plane.rs  data_storage.rs  mod.rs  viz_stage.rs  viz_storage.rs
src/storage/visualization/coloring/: base.rs  mod.rs  presets.rs
