# This is the project defintion file for mandel.rs

[package]
name = "mandel-rs"
rust-version = "1.88"
version = "0.1.0"
edition = "2024"
authors = ["Dirk Hillbrecht <dirk@hillbrecht.de>", "Claude AI"]
description = "A fractal graphics visualizer written in Rust, to produce nice graphics and to learn Rust"

[dependencies]
iced = { version = "0.13.1", features = ["image", "tokio", "canvas"] }
rand = "0.9.1"
tokio = { version = "1.46.1", features = ["full"] }
async-stream = "0.3"
palette = "0.7"
euclid = "0.22.11"
png = "0.17.16"
rfd = "0.15.4"
rayon = "1.8"

# end of file
