# This is the project defintion file for mandel.rs

[package]
name = "mandel-rs"
version = "0.4.0"
description = "A fractal graphics visualizer written in Rust, to produce nice graphics and to learn Rust"
authors = ["Dirk Hillbrecht <dirk@hillbrecht.de>", "Claude AI"]
rust-version = "1.89"
edition = "2024"

[dependencies]
async-stream = "0.3"
bigdecimal = "0.4.8"
clap = { version = "4.5.44", features = ["derive"] }
euclid = "0.22.11"
iced = { version = "0.13.1", features = ["image", "tokio", "canvas"] }
palette = "0.7"
png = "0.17.16"
rand = "0.9.2"
rayon = "1.8"
rfd = "0.15.4"
tokio = { version = "1.47.1", features = ["full"] }

[build-dependencies]
chrono = "0.4.41"
gix = "0.73.0"
semver = "1.0.26"

# end of file
