# This is the project defintion file for mandel.rs

[package]
name = "mandel-rs"
version = "0.6.0"
description = "A fractal graphics visualizer written in Rust, to produce nice graphics and to learn Rust"
authors = ["Dirk Hillbrecht <dirk@hillbrecht.de>", "Claude AI"]
rust-version = "1.90"
edition = "2024"

[dependencies]
async-stream = "0.3"
bigdecimal = "0.4.8"
clap = { version = "4.5.48", features = ["derive"] }
euclid = "0.22.11"
iced = { version = "0.13.1", features = ["image", "tokio", "canvas"] }
palette = "0.7"
png = "0.18.0"
rand = "0.9.2"
rayon = "1.11.0"
rfd = "0.15.4"
tokio = { version = "1.47.1", features = ["full"] }

[build-dependencies]
chrono = "0.4.42"
gix = "0.73.0"
semver = "1.0.27"

# end of file
